downgrade java version from 21